--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@types/node": "22.15.3",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.3",
-    "autoprefixer": "10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "9.26.0",
@@ -36,7 +35,7 @@
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animated": "^2.0.0",
     "typescript": "5.8.3"
   },
   "devDependencies": {
