--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/react": "^0.1.7",
+    "@egjs/react-view3d": "^2.3.1",
+    "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-menubar": "^1.1.12",
