--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss": "^8.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.2.0",
