--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-use": "^17.6.0",
+    "simple-icons": "^14.14.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
     "tailwindcss-animated": "^2.0.0",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "tw-animate-css": "^1.2.9"
