feat(faq): init

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.27",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/react": "^0.1.21",
     "@egjs/react-view3d": "^2.3.1",
@@ -24,6 +25,7 @@
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "@vercel/analytics": "^1.5.0",
+    "ai": "^5.0.87",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "9.39.1",
@@ -32,6 +34,7 @@
     "motion": "^12.23.24",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.7.2",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -42,6 +45,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
     "tailwindcss-animated": "^2.0.0",
+    "tsx": "^4.20.6",
     "typescript": "5.9.3",
     "zustand": "^5.0.8"
   },
