--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "baseline-browser-mapping": "^2.10.0",
     "tw-animate-css": "^1.4.0"
   }
 }
